# weasel-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  deploy.sh  pyproject.toml  setup.py  weasel.py
.github/workflows/: build.yml  deploy.yml
