[tool.poetry]
name = "weasel-cli"
version = "1.0.2-alpha.0"
description = "Simulate Dawkins' weasel experiment"
authors = ["Wesley Rocha <wesleysr1997@gmail.com>"]
license = "MIT"
packages = [
    { include = "weasel.py" }
]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
weasel = 'weasel:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"